@@ -34,15 +34,21 @@ sub compile {
     #print 'rule source: ', $self->{source}, "\n";
     local $@;
 
-    $self->{grammar} =~ s/^perl5://;
-
     $self->{backend}  = 'perl5:Pugs::Emitter::Perl6::Perl5'
         if $self->{backend} eq 'perl5';
     $self->{backend} =~ s/^perl5://;
     #print "backend: ", $self->{backend}, "\n";
     eval " require $self->{backend} ";
         if ( $@ ) {
-            carp "Error in perl 6 backend: $@";
+            carp "Error loading backend module: $@";
+            return;
+        }
+
+    $self->{grammar} =~ s/^perl5://;
+    #print "grammar: ", $self->{grammar}, "\n";
+    eval " require $self->{grammar} ";
+        if ( $@ ) {
+            carp "Error loading grammar module: $@";
             return;
         }
 
@@ -52,9 +58,47 @@ sub compile {
     # AST = { statements => \@statement }
 
     my $source = $self->{source};
+    my $pos = $self->{p} || 0;
+
+    # generic grammar?
+    if ( $self->{grammar} ne 'Pugs::Grammar::Perl6' ) {
+
+        #print "Parsing $self->{grammar} \n";
+        eval {
+            no strict 'refs';
+            $self->{ast} = &{$self->{grammar} . '::parse'}( $self->{grammar}, $source, { pos => $pos } );
+            $pos = $self->{ast}->to if $self->{ast};
+        };
+        #print "Done Parsing $self->{grammar} \n";
+        #print Dumper( $self->{ast} );
+        if ( $@ ) {
+            carp "Error in parser: $@";
+            return;
+        }
+        elsif ( ! defined $self->{ast} ) {
+            carp "Error in parser: No match found";
+            return;
+        }
+        $self->{ast} = $self->{ast}->();
+
+        if ( $self->{ast} ) {
+            eval {
+                no strict 'refs';
+                $self->{perl5} = &{$self->{backend} . '::emit'}( 
+                    $self->{grammar}, $self->{ast}, $self );
+            };
+            {
+            no warnings 'uninitialized';
+            carp "Error in perl 5 emitter: $@\nSource:\n$self->{perl5}\n" if $@;
+            }
+            #print 'rule perl5: ', do{use Data::Dumper; Dumper($self->{perl5})};
+        }
+        bless $self, $class;
+
+    } # / generic grammar
+
     my @statement;
     my $error = 0;
-    my $pos = $self->{p} || 0;
 
     my $source_line_number = 1;
     my $source_pos = 0;
