@@ -4,6 +4,7 @@
   '-Bperl5' also invokes the default backend.
 - command-line switch -G can be set to alternate grammar frontends.
   The default is '-Gperl5:Pugs::Grammar::Perl6'
+- implemented grammar and emitter backends for YAML
 - added a version banner - perl lib/v6.pm -v
 - eval() in caller's context
 
